# fork-tinytracker

./: .gitignore  Makefile  README.md  pyproject.toml
tinytracker/: WebcamDemoTflite.py
