[project]
name = "tinytracker"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "matplotlib==3.7.1",
    "numpy>=1.26.0,<2.2.0",
    "opencv-python==4.7.0.72",
    "Pillow==9.3.0",
    "pyserial==3.5",
    "scipy==1.11.3",
    "tqdm==4.65.0",
    "tensorflow>=2.19,<2.20"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
